--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,18 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+.bg-image {
+  position: relative;
+}
+
+.bg-image::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-image: url("../../public/0x0.png");
+  background-size: 50rem;
+  background-repeat: no-repeat;
+  background-position: center calc(100% - 8rem);
+  opacity: 0.1; /* 👈 change opacity here */
+  pointer-events: none;
+}
